# My-AI-experiment

./: .gitmodules  404.html  Feel-human.md  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  sitemap.xml
.github/: README.md.template  action.md.template  config.json  index.md.template  replace.sh  toc.py
.github/workflows/: blank.yml  publish.yml
Agents/copilot/: index.html
Agents/kgent/: index.html
Agents/swarm/: index.html
Agents/swarm.zh/: index.html
Future/ai-os/: index.html
Future/future-hostory/: index.html
Future/guidance/: index.html
Future/history/: index.html
Future/natual-language-program/: index.html
Future/openai-canvas/: index.html
Future/openai-canvas.zh/: index.html
Future/plugin/: index.html
Notes/inference-locally/: index.html
docs/: index.md  index.zh.md
playground/: README.md  gen.py  gen_struct.py  linkcheck.py  tavily_search.py
playground/latest_ai_development/: .gitignore  README.md  blog.md  pyproject.toml
playground/latest_ai_development/src/latest_ai_development/: crew.py  main.py
playground/latest_ai_development/src/latest_ai_development/config/: agents.yaml  tasks.yaml
playground/latest_ai_development/src/latest_ai_development/tools/: custom_tool.py
playground/paper_discussion/: .gitignore  README.md  pyproject.toml
playground/paper_discussion/src/paper_discussion/: crew.py  main.py
playground/paper_discussion/src/paper_discussion/config/: agents.yaml  tasks.yaml
search/: search_index.json
zh/: index.html
(+277 files in other folders)
